# health-calc-imc

./: README.md  pyproject.toml
src/: health-calc-imc-interface.py  health-calc-imc.py
